--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/Theme.AppCompat.Light" >
         <activity
             android:name=".activities.PreLoginActivity"
             android:label="@string/app_name" >
@@ -40,6 +40,10 @@
         <activity
             android:name=".activities.PostLoginActivity"
             android:label="@string/title_activity_post_login" >
+        </activity>
+        <activity
+            android:name=".activities.CreateGroupActivity"
+            android:label="@string/title_activity_create_group" >
         </activity>
     </application>
 
