+Added interface for inviting new members +Works in a limited fashion. Can currently only invite members with email in the TOP text view

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,10 @@
             android:name=".activities.GroupDetailsActivity"
             android:label="@string/title_activity_group_details" >
         </activity>
+        <activity
+            android:name=".activities.InviteMembersActivity"
+            android:label="@string/title_activity_invite_members" >
+        </activity>
     </application>
 
 </manifest>
