--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,13 @@ repositories {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile fileTree(dir: 'libs', include: 'Parse-*.jar')
-    compile('com.segment.analytics.android:analytics:+@aar') {
+//    compile('com.segment.analytics.android:analytics:+@aar') {
+//        transitive = true
+//    }
+    compile('com.segment.analytics.android:analytics-core:+') {
+        transitive = true
+    }
+    compile('com.segment.analytics.android:analytics-integration-mixpanel:+') {
         transitive = true
     }
     compile 'com.android.support:appcompat-v7:22.0.0'
