--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -97,7 +97,7 @@
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
                 <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
 
-<!--                   IMPORTANT: Change "com.parse.starter" to match your app's package name. -->
+                <!-- IMPORTANT: Change "com.parse.starter" to match your app's package name. -->
                 <category android:name="com.wisecityllc.cookedapp" />
             </intent-filter>
         </receiver>
@@ -110,6 +110,10 @@
         <activity
             android:name=".activities.MessageWallActivity"
             android:label="@string/title_activity_message_wall" >
+        </activity>
+        <activity
+            android:name=".activities.GroupsListActivity"
+            android:label="@string/title_activity_groups_list" >
         </activity>
     </application>
 
