+Base classes for viewing and editing user details

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,8 +38,8 @@
     <!-- <uses-permission android:name="android.permission.CAMERA" /> -->
     <!-- <uses-feature android:name="android.hardware.camera" /> -->
     <!-- <uses-feature android:name="android.hardware.camera.autofocus" /> -->
-    <!-- This used to be the name of the applicaiton tag-->
-    <!--android:name=".App"-->
+    <!-- This used to be the name of the applicaiton tag -->
+    <!-- android:name=".App" -->
     <application
         android:name=".App"
         android:allowBackup="true"
@@ -116,6 +116,14 @@
         <activity
             android:name=".activities.GroupsListActivity"
             android:label="@string/title_activity_groups_list" >
+        </activity>
+        <activity
+            android:name=".activities.UserDetailsActivity"
+            android:label="@string/title_activity_user_details" >
+        </activity>
+        <activity
+            android:name=".activities.EditUserDetailsActivity"
+            android:label="@string/title_activity_edit_user_details" >
         </activity>
     </application>
 
