--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -133,6 +133,10 @@
             android:name=".activities.EditUserDetailsActivity"
             android:label="@string/title_activity_edit_user_details" >
         </activity>
+        <activity
+            android:name=".activities.IntroSlidesActivity"
+            android:label="@string/title_activity_intro_slides" >
+        </activity>
     </application>
 
 </manifest>
